gitops/infrastructure/observability/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
      alertmanager: kube-prometheus-stack-alertmanager
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
            prometheus: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
            # kube-prometheus-stack 75.18.1 self-monitoring endpoint.
            - port: "8080"
              protocol: TCP
            - port: "15008"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: discord.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
